--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -161,6 +161,7 @@
       margin-bottom: 15px;
       line-height: 1.6;
       border: 1px solid var(--border);
+      white-space: pre-line;
     }
 
     #annotated, #videoResult {
