--- a/Web/templates/urban.html
+++ b/Web/templates/urban.html
@@ -85,6 +85,7 @@
       <img id="annotated" class="mt-4 hidden w-full rounded-2xl border border-white/10" alt="Annotated detections" />
       <video id="videoResult" class="mt-4 hidden w-full rounded-2xl border border-white/10" controls></video>
       <a id="downloadLink" class="mt-4 hidden rounded-2xl border border-white/20 bg-black/30 px-4 py-3 text-center text-sm font-semibold text-emerald-50" download>Download</a>
+      <button id="analysisBtn" class="btn btn-outline-success mt-4 hidden w-full text-sm font-semibold uppercase tracking-wide" type="button" disabled>Show Analysis</button>
     </div>
   </div>
 
